--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-svc
+  name: java
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx-svc
+      app: java
   template:
     metadata:
       labels:
-        app: nginx-svc
+        app: java
     spec:
       containers:
-        - name: nginx-svc
+        - name: java
           image: gcr.io/PROJECT_ID/IMAGE:TAG
           imagePullPolicy: Always
